--- a/views/index.html
+++ b/views/index.html
@@ -1,6 +1,11 @@
 <body>
     <button onclick="window.location.reload()">Run Program</button>
     <div id="terminal"></div>
+    <div>
+        <a href="https://docs.google.com/spreadsheets/d/1_881-aBxzA8TwstEB7xGB9ZpJzDYFXvt9tCD4hYbZWU/edit#gid=0" target="_blank"
+        >Link to Google Sheets Leaderboard
+    </a>
+    </div>
 
     <script>
         var term = new Terminal({
